@@ -1,11 +1,12 @@
+//@@author CarbonGrid
 package seedu.address.ui.autocomplete;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.regex.Pattern;
 
 import seedu.address.logic.commands.ExitCommand;
 import seedu.address.logic.commands.HelpCommand;
@@ -41,16 +42,14 @@ import seedu.address.logic.commands.staff.RegisterStaffCommand;
  */
 public class AutoCompleter {
     private static final Map<String, Set<String>> SUPPORTED_ARGUMENTS = Map.ofEntries(
-            Map.entry("ackappt", Set.of("i/")),
-            Map.entry("addappt", Set.of("i/", "rec/", "num/", "str/")),
-            Map.entry("addshift", Set.of("i/", "rec/", "num/", "str/")),
-            Map.entry("appointments", Set.of("i/")),
-            Map.entry("changeappt", Set.of("str/")),
-            Map.entry("changeshift", Set.of("str/")),
-            Map.entry("newdoctor", Set.of("i/", "n/", "p/", "a/", "e/")),
-            Map.entry("register", Set.of("i/", "n/", "p/", "a/", "t/", "e/")),
-            Map.entry("update", Set.of("i/", "n/", "p/", "a/", "t/", "e/")),
-            Map.entry("updatedoctor", Set.of("i/", "n/", "p/", "a/", "e/"))
+            Map.entry("addappt", Set.of("-id", "-rec", "-num", "-start")),
+            Map.entry("addshift", Set.of("-id", "-rec", "-num", "-start")),
+            Map.entry("changeappt", Set.of("-start")),
+            Map.entry("changeshift", Set.of("-start")),
+            Map.entry("edit", Set.of("-id", "-name", "-phone", "-address", "-tag", "-email")),
+            Map.entry("newdoctor", Set.of("-id", "-name", "-phone", "-address", "-email")),
+            Map.entry("register", Set.of("-id", "-name", "-phone", "-address", "-tag", "-email")),
+            Map.entry("updatedoctor", Set.of("-id", "-name", "-phone", "-address", "-email"))
     );
 
     private static final String[] SUPPORTED_COMMANDS = new String[]{
@@ -92,7 +91,10 @@ public class AutoCompleter {
             ResumeCommand.COMMAND_WORD
     };
 
-    private Trie trie;
+    private static final Pattern HAS_FLAG = Pattern.compile("(.* )?(?<!-)\\w+\\s+$");
+    private static final Pattern CONTINUOUS_SPACES = Pattern.compile("\\s+");
+
+    private final Trie trie;
     private String currentQuery;
 
     public AutoCompleter() {
@@ -110,15 +112,13 @@ public class AutoCompleter {
      * @return AutoComplete itself
      */
     public AutoCompleter update(String currentQuery) {
-        if (currentQuery.matches("(.*)?\\s*\\w+\\s+$")) { //For Linux flag use "(.* )?(?<!-)\\w+\\s+$"
+        if (HAS_FLAG.matcher(currentQuery).matches()) {
             try {
                 Set<String> result = SUPPORTED_ARGUMENTS.get(currentQuery.substring(0, currentQuery.indexOf(' ')));
                 HashSet<String> available = new HashSet<>(result);
-                Arrays.asList(currentQuery.split("\\s+"))
-                        .forEach(e -> available.remove(e.substring(0, e.indexOf('/') + 1).trim()));
-                //available.removeAll(Arrays.asList(currentQuery.split("\\s+"))); //Linux flag uses "\\s+"
-                if (result.contains("t/")) {
-                    available.add("t/");
+                available.removeAll(List.of(CONTINUOUS_SPACES.split(currentQuery)));
+                if (result.contains("-tag")) {
+                    available.add("-tag");
                 }
                 AutoCompleter autoCompleter = new AutoCompleter(available.toArray(String[]::new));
                 autoCompleter.currentQuery = currentQuery.substring(currentQuery.lastIndexOf(' ') + 1);
